@startuml
set namespaceSeparator ::

class "fboilerplate::app::screens::myhomepage::my_home_page.dart::MyHomePage" {
  +dynamic title
  +dynamic message
  {static} +Key titleKey
  {static} +Key messageKey
  +MyHomePageState createState()
}

"fboilerplate::app::screens::myhomepage::my_home_page.dart::MyHomePage" o-- "flutter::src::foundation::key.dart::Key"
"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "fboilerplate::app::screens::myhomepage::my_home_page.dart::MyHomePage"

class "fboilerplate::app::screens::myhomepage::my_home_page_state.dart::MyHomePageState" {
  +void incrementCounter()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State<T>" <|-- "fboilerplate::app::screens::myhomepage::my_home_page_state.dart::MyHomePageState"
"fboilerplate::app::screens::myhomepage::statecontroller::counter_store_mixin.dart::CounterStoreMixin" <|-- "fboilerplate::app::screens::myhomepage::my_home_page_state.dart::MyHomePageState"

class "fboilerplate::app::screens::myhomepage::statecontroller::counter_store_mixin.dart::CounterStoreMixin" {
  {static} -int _counter
  +int myCounter
  +int increaseCounter()
}

class "fboilerplate::app::screens::my_app.dart::MyApp" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "fboilerplate::app::screens::my_app.dart::MyApp"

abstract class "fboilerplate::app::shared::logger_types.dart::UiLogger" {
  +Logger logger
}

"fboilerplate::app::shared::logger_types.dart::UiLogger" o-- "logging::src::logger.dart::Logger"

abstract class "fboilerplate::app::shared::logger_types.dart::NetworkLogger" {
  +Logger logger
}

"fboilerplate::app::shared::logger_types.dart::NetworkLogger" o-- "logging::src::logger.dart::Logger"

abstract class "fboilerplate::app::shared::logger_types.dart::UtilityLogger" {
  +Logger logger
}

"fboilerplate::app::shared::logger_types.dart::UtilityLogger" o-- "logging::src::logger.dart::Logger"

class "fboilerplate::app::shared::log_exception.dart::LogException" {
  +String message
  +StackTrace stackTrace
  +Zone zone
  +DateTime time
  +int level
  +Object cause
}

"fboilerplate::app::shared::log_exception.dart::LogException" o-- "dart::async::Zone"

abstract class "fboilerplate::app::shared::types.dart::LoggerType" {
  +Logger logger
}

"fboilerplate::app::shared::types.dart::LoggerType" o-- "logging::src::logger.dart::Logger"


@enduml